[package]
name = "katengine_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# windows dependencies
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_Foundation"
]

[dependencies]
winit = "0.26.1"
ash = "0.35.1+1.2.203"
